--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
       <div class="form-date-group">
         <div class="form-group">
-          <label for="job-1__start">Start Date</label>
+          <label class="dates" for="job-1__start">Start Date</label>
           <input type="date" name="job-1__start" id="job-1__start">
         </div>
         <div class="form-group">
@@ -119,7 +119,7 @@
 
       <div class="form-date-group">
         <div class="form-group">
-          <label for="job-2__start">Start Date</label>
+          <label class="dates" for="job-2__start">Start Date</label>
           <input type="date" name="job-2__start" id="job-2__start">
         </div>
         <div class="form-group">
@@ -139,7 +139,7 @@
 
       <div class="form-date-group">
         <div class="form-group">
-          <label for="job-3__start">Start Date</label>
+          <label class="dates" for="job-3__start">Start Date</label>
           <input type="date" name="job-3__start" id="job-3__start">
         </div>
         <div class="form-group">
